# vpshunt-studio

./: .gitignore  CLAUDE.md  PROJECT_INSTRUCTIONS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.claude/hooks/: pre-tool-use.cjs  pre-tool-use.js
.claude/hooks/tests/: pre-tool-use-test.js  pre-tool-use.test.js
api/: .env.example  README.md  pyproject.toml  requirements.txt
api/app/: __init__.py  config.py  main.py
api/app/db/: __init__.py  models.py
api/app/models/: __init__.py  shunt.py
api/app/routers/: shunts.py
api/app/services/: __init__.py
coverage/: clover.xml  coverage-final.json  index.html
coverage/src/: App.tsx.html  constant.ts.html  i18n.ts.html  index.html  main.tsx.html
coverage/src/api/: index.html  shunts.ts.html
coverage/src/contexts/: ThemeContext.tsx.html  index.html
coverage/src/themes/: index.html  theme.ts.html
frontend/: README.md
frontend/src/: i18n.ts  main.tsx
frontend/src/__tests__/: App.test.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/themes/: theme.ts
src/: App.tsx  AppRouter.tsx  config.ts  main.tsx  types.ts
src/__tests__/: App.test.tsx
src/api/: shunts.ts
src/components/: App.tsx  Dashboard.tsx  NavBar.tsx  NewEntry.tsx  NewShuntEntryForm.tsx  TestForm.tsx
src/components/common/: Modal.tsx
src/components/dashboard/: types.ts  utils.test.ts  utils.ts
src/components/home/: Home.test.tsx  Home.tsx
src/contexts/: ThemeContext.test.tsx
src/schemas/: newShuntEntrySchema.tsx
src/themes/: theme.test.ts  theme.ts
(+53 files in other folders)
